--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,6 @@ html {
 body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+body {
+  font-family: 'Montserrat', sans-serif; }
