--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,7 @@
 
-
+body {
+  font-family: 'Montserrat', sans-serif
+}
 // font-family: 'Montserrat',
 // sans-serif;
 // font-family: 'Josefin Sans',
