--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 
 @import "components/button";
 @import "components/composition";
-@import "components/feature-box";
+@import "components/navbar";
 @import "components/section-class";
 
 @import "layout/header";
