--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -2,9 +2,12 @@
 $color-primary: #173653;
 $color-primary-light: #5f91bd;
 $color-primary-dark: #101b2d;
+$color-orange: #deaa86;
 $color-white: #fff;
 $color-black: #222;
 $color-grey: #eee;
+$color-grey-dark: #555;
+
 
 //font
 $default-font-size: 1.6rem;
