--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -1,4 +1,31 @@
-// sidebar
+%nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+%navlink {
+  content: "";
+  width: 0rem;
+  height: .1rem;
+  position: absolute;
+  top: 1rem;
+  -webkit-transition: width .5s cubic-bezier(1, 0, 0, 1);
+  transition: width .5s cubic-bezier(1, 0, 0, 1);
+  background-color: $color-orange;
+}
+
+//---- sidebar
 
 .sidebar {
   width: 8rem;
@@ -6,7 +33,7 @@
   background-color: $color-grey;
   position: fixed;
   @extend %nav;
-
+  z-index:10;
   .menu-icon {
     margin-top: 3rem;
     cursor: pointer;
@@ -61,9 +88,9 @@
   }
 }
 
-//nav
+//-----nav
 .navigation {
-  margin-left: 8rem;
+  left:-32rem;
   position: fixed;
   height: 100%;
   width: 40rem;
@@ -73,6 +100,8 @@
   url(../../img/nav-bg.jpeg) center no-repeat;
   background-size: cover;
   @extend %nav;    
+  -webkit-transition: left .8s cubic-bezier(1,0,0,1);    
+  transition: left .8s cubic-bezier(1,0,0,1);
   &-heading{
     font-family: 'Josefin Sans', sans-serif;
     font-size: 3.5rem;
@@ -138,14 +167,21 @@
       }
       &:before {
         @extend %navlink;
-        background-color: $color-orange;
         left:-4rem;
       }
       &:after {
         @extend %navlink;
-        background-color: $color-orange;
         right: -4rem;
       }
     }
   }
+  .copyright {
+    color: $color-white;
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+  }
+}
+
+.checkbox:checked ~ .navigation {
+  left: 8rem;
 }
