--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -47,8 +47,10 @@
       margin-bottom: .6rem;
       &-1, &-3 {
         width: 1.8rem;
-        -webkit-transition: width .3s;
-        transition: width .3s;
+        -webkit-transition: width .4s;
+        -webkit-transition: all .4s;
+        -webkit-transition: all .4s;
+        transition: all .4s;
       }
     }
   } 
@@ -182,6 +184,19 @@
   }
 }
 
-.checkbox:checked ~ .navigation {
-  left: 8rem;
-}
+.checkbox:checked~ {
+  & .navigation{ left: 8rem; }
+  & .sidebar {
+    .line-1 {
+    -webkit-transform: rotate(-405deg) translate(-5px, 6px);
+            transform: rotate(-405deg) translate(-5px, 6px);  
+    width: 2.5rem;
+    }
+    .line-2 { opacity: 0; }
+    .line-3 {
+    -webkit-transform: rotate(405deg) translate(-5px, -6px);
+            transform: rotate(405deg) translate(-5px, -6px);
+    width: 2.5rem;
+    }
+  }
+} 
