header style, wip

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import "base/utilitie";
 
 @import "components/button";
-@import "components/composition";
+@import "components/header";
 @import "components/navbar";
 @import "components/section-class";
 
