--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,70 @@ body {
 body {
   font-family: 'Montserrat', sans-serif; }
 
+.header {
+  margin-left: 8rem;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.5))), url(../../img/bg.jpg) center no-repeat;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url(../../img/bg.jpg) center no-repeat;
+  background-size: cover;
+  height: 100vh; }
+  .header .brand {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    cursor: pointer; }
+    .header .brand img {
+      margin: 10px 20px; }
+    .header .brand .hotel-heading {
+      font-family: 'Josefin Sans', sans-serif;
+      font-size: 2.7rem;
+      font-weight: 400;
+      color: #deaa86;
+      letter-spacing: .2rem; }
+  .header .banner {
+    color: #ddd;
+    height: 65rem;
+    height: 65rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    .header .banner-heading {
+      font-family: 'Josefin Sans', sans-serif;
+      font-size: 6rem;
+      font-weight: 400;
+      margin-bottom: 0; }
+    .header .banner-paragraph {
+      font-size: 3.5rem;
+      font-weight: 300; }
+    .header .banner-btn {
+      width: 21rem;
+      padding: 1.2rem 2rem;
+      border-radius: 10rem;
+      font-size: 2rem;
+      letter-spacing: .1rem;
+      background: -webkit-gradient(linear, left top, right top, from(gold), to(goldenrod));
+      background: linear-gradient(to right, gold, goldenrod);
+      border: none;
+      color: #333;
+      outline: none;
+      -webkit-transition: all .3s;
+      transition: all .3s; }
+      .header .banner-btn:hover {
+        background: -webkit-gradient(linear, right top, left top, from(gold), to(goldenrod));
+        background: linear-gradient(to left, gold, goldenrod); }
+      .header .banner-btn:active {
+        -webkit-transform: translateY(5px);
+        transform: translateY(5px); }
+
 .sidebar, .navigation, .navigation-list {
   display: -webkit-box;
   display: -ms-flexbox;
