--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,18 @@ body {
   margin: 0;
   padding: 0; }
 
+@-webkit-keyframes anim {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 01; } }
+
+@keyframes anim {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 01; } }
+
 body {
   font-family: 'Montserrat', sans-serif; }
 
@@ -50,10 +62,14 @@ body {
       font-family: 'Josefin Sans', sans-serif;
       font-size: 6rem;
       font-weight: 400;
-      margin-bottom: 0; }
+      margin-bottom: 0;
+      -webkit-animation: anim 2s;
+      animation: anim 2s; }
     .header .banner-paragraph {
       font-size: 3.5rem;
-      font-weight: 300; }
+      font-weight: 300;
+      -webkit-animation: anim 1.5s .5s backwards;
+      animation: anim 1.5s .5s backwards; }
     .header .banner-btn {
       width: 21rem;
       padding: 1.2rem 2rem;
@@ -65,6 +81,8 @@ body {
       border: none;
       color: #333;
       outline: none;
+      -webkit-animation: anim 1s 1s backwards;
+      animation: anim 1s 1s backwards;
       -webkit-transition: all .3s;
       transition: all .3s; }
       .header .banner-btn:hover {
