--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -42,10 +42,14 @@
       font-size: 6rem;
       font-weight: 400;
       margin-bottom: 0;
+      -webkit-animation: anim 2s;
+              animation: anim 2s; 
     }
     &-paragraph {
       font-size: 3.5rem;
       font-weight: 300;  
+      -webkit-animation: anim 1.5s .5s backwards;  
+      animation: anim 1.5s .5s backwards;
     }
     &-btn {
       width:21rem;
@@ -58,6 +62,8 @@
       border: none;
       color:#333;
       outline:none;
+      -webkit-animation: anim 1s 1s backwards;
+              animation: anim 1s 1s backwards;
       -webkit-transition: all .3s;
       transition: all .3s;
       &:hover {
