--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,8 +1,11 @@
 //color
-$color-primary: #173653;
-$color-primary-light: #5f91bd;
-$color-primary-dark: #101b2d;
+// $color-primary: #173653;
+// $color-primary-light: #5f91bd;
+// $color-primary-dark: #101b2d;
 $color-orange: #deaa86;
+$color-orange-dark: #b85d1c;
+
+
 $color-white: #fff;
 $color-black: #222;
 $color-grey: #eee;
