--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "components/button";
 @import "components/header";
 @import "components/navbar";
-@import "components/section-class";
+@import "components/aboutus";
 
 @import "layout/header";
 @import "layout/grid";
