--- a/css/style.css
+++ b/css/style.css
@@ -306,19 +306,29 @@ body {
     letter-spacing: .2rem;
     text-transform: capitalize;
     color: #b85d1c; }
+  .about-us-paragraph {
+    font-size: 1.6rem;
+    font-style: italic;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 5rem; }
   .about-us-btn {
-    width: 21rem;
-    padding: 2rem 3rem;
-    color: #deaa86;
+    width: 15rem;
+    padding: .7rem .5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    color: #b85d1c;
     background-color: transparent;
     text-transform: uppercase;
-    border: 1px solid #deaa86;
-    -webkit-transition: margin-left .8s;
-    transition: margin-left .8s; }
-    .about-us-btn:hover .fa-angle-double-right {
-      margin-left: 2rem; }
-    .about-us-btn .fa-angle-double-right {
-      margin-left: .7rem; }
+    border: 0.1rem solid #b85d1c;
+    outline: none;
+    cursor: pointer; }
+    .about-us-btn:hover .btn-arrow {
+      margin-left: 1.5rem; }
+    .about-us-btn .btn-arrow {
+      margin-left: .5rem;
+      -webkit-transition: margin-left .8s;
+      transition: margin-left .8s; }
   .about-us-images {
     -webkit-box-flex: 1;
     -ms-flex: 1 1;
