--- a/css/style.css
+++ b/css/style.css
@@ -332,4 +332,26 @@ body {
   .about-us-images {
     -webkit-box-flex: 1;
     -ms-flex: 1 1;
-    flex: 1 1; }
+    flex: 1 1;
+    position: relative; }
+    .about-us-images .image {
+      width: 32rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.4);
+      box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.4);
+      border-radius: .4rem;
+      border: 0.2rem solid #b85d1c; }
+    .about-us-images .image-1 {
+      -webkit-transform: translate(-20%, -90%);
+      transform: translate(-20%, -90%); }
+    .about-us-images .image-2 {
+      -webkit-transform: translate(-70%, -70%);
+      transform: translate(-70%, -70%); }
+    .about-us-images .image-3 {
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+    .about-us-images .image-4 {
+      -webkit-transform: translate(-30%, -30%);
+      transform: translate(-30%, -30%); }
