--- a/sass/components/_aboutus.scss
+++ b/sass/components/_aboutus.scss
@@ -84,6 +84,34 @@
     -webkit-box-flex: 1;
       -ms-flex: 1 1;
         flex: 1 1;
+    position: relative;
+
+   .image{
+     width: 32rem;
+     position: absolute;
+     top:50%;
+     left:50%;
+     -webkit-box-shadow: 0 3rem 6rem rgba(0,0,0,.4);
+             box-shadow: 0 3rem 6rem rgba(0,0,0,.4);
+     border-radius: .4rem;
+     border:.2rem solid $color-orange-dark; 
+   } 
+   .image-1 {
+     -webkit-transform: translate(-20%, -90%);
+             transform: translate(-20%, -90%);
+   }
+    .image-2 {
+      -webkit-transform: translate(-70%, -70%);
+              transform: translate(-70%, -70%);
+    }
+    .image-3 {
+      -webkit-transform: translate(-50%,-50%);
+              transform: translate(-50%,-50%);
+    }  
+    .image-4 {
+      -webkit-transform: translate(-30%, -30%);
+      transform: translate(-30%, -30%);
+    }
   }
 }
 
