--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -7,7 +7,7 @@ $color-orange-dark: #b85d1c;
 
 
 $color-white: #fff;
-$color-black: #222;
+$color-black: #15141b;
 $color-grey: #eee;
 $color-grey-dark: #555;
 
