--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 @import "base/typography";
 @import "base/utilitie";
 
-@import "components/button";
+@import "components/rooms";
 @import "components/header";
 @import "components/navbar";
 @import "components/aboutus";
