--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,12 +7,12 @@
 @import "base/typography";
 @import "base/utilitie";
 
-@import "components/rooms";
-@import "components/header";
-@import "components/navbar";
-@import "components/aboutus";
-
+@import "layout/rooms";
 @import "layout/header";
-@import "layout/grid";
+@import "layout/navbar";
+@import "layout/aboutus";
+@import "layout/customer";
+
+@import "components/heading";
 
 @import "pages/home";
