added customer css

--- a/css/style.css
+++ b/css/style.css
@@ -412,39 +412,46 @@ body {
 
 .customers {
   margin-left: 8rem;
+  -webkit-padding-after: 8rem;
+  padding-block-end: 8rem;
   background-color: #15141b; }
   .customers .customer-paragraph {
     width: 60rem;
     color: #ddd;
-    margin: auto;
+    margin: 2rem auto 8rem auto;
     text-align: center;
-    font-size: 2rem;
-    margin-bottom: 5rem; }
-  .customers .card-wrapper {
+    font-size: 1.8rem; }
+  .customers .customers-card-wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; }
-    .customers .card-wrapper .customer-card {
-      background-color: #fff;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly; }
+    .customers .customers-card-wrapper .customer-card {
+      background-color: #eee;
+      width: 60rem;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex; }
-      .customers .card-wrapper .customer-card .customer-imag-wrapper .customer-image {
-        width: 20rem; }
-      .customers .card-wrapper .customer-card .customer-fullname {
-        font-size: 2rem;
-        font-weight: 300; }
-      .customers .card-wrapper .customer-card .customer-paragraph-1 {
-        color: #b85d1c;
-        font-size: 1.3rem; }
-      .customers .card-wrapper .customer-card .customer-paragraph-2 {
-        font-size: 1.3rem; }
+    .customers .customers-card-wrapper .customer-image-wrapper {
+      margin: auto 0; }
+    .customers .customers-card-wrapper .customer-image {
+      width: 20rem;
+      margin-left: -1.3rem; }
+    .customers .customers-card-wrapper .customer-info {
+      padding: 0 2rem; }
+    .customers .customers-card-wrapper .customer-fullname {
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 0; }
+    .customers .customers-card-wrapper .customer-paragraph-1 {
+      color: #b85d1c;
+      font-size: 1.2rem;
+      font-style: italic; }
+    .customers .customers-card-wrapper .customer-paragraph-2 {
+      font-size: 1.3rem;
+      font-style: italic; }
 
 .common-header {
   padding: 5rem;
