change in sass folder,am pages

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,8 @@
 @import "layout/navbar";
 @import "layout/aboutus";
 @import "layout/customer";
+@import "layout/footer";
 
 @import "components/heading";
 
-@import "pages/home";
+
